// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a \`boolean\` type field 1`] = `
<div
  className="CheckboxWidget"
/>
`;

exports[`Field renders a \`datetime\` named field 1`] = `
<div
  className="DatetimeWidget"
/>
`;

exports[`Field renders a \`password\` named field 1`] = `
<div
  className="PasswordWidget"
/>
`;

exports[`Field renders a \`richtext\` named field 1`] = `
<div
  className="WysiwygWidget"
/>
`;

exports[`Field renders a \`text\` named field 1`] = `
<div
  className="TextWidget"
/>
`;

exports[`Field renders a \`textarea\` named field 1`] = `
<div
  className="TextareaWidget"
/>
`;

exports[`Field renders a fallback field 1`] = `
<div
  className="TextWidget"
/>
`;

exports[`Field renders a field with a specific id 1`] = `
<div>
  <div
    className="ui raised segments"
  >
    <div
      className="ui pointing secondary attached tabular menu"
      role="tablist"
    >
      <div
        className="item active"
        onClick={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <i
          aria-hidden="true"
          className="grey bars icon drag handle"
        />
        <button
          className="item ui noborder button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="blue write square large icon"
          />
        </button>
        <button
          className="item ui noborder button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="red close large icon"
          />
        </button>
      </div>
      <div
        className="item"
      >
        <button
          aria-label="Add"
          className="item ui noborder button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="plus large icon"
          />
        </button>
      </div>
    </div>
    <div
      className="inline field"
    >
      <div
        className="ui grid"
      >
        <div
          className="stretched row"
        >
          <div
            className="twelve wide column"
          >
            <div
              className="wrapper"
            >
              <label
                htmlFor="addfield"
              >
                Add new field
              </label>
            </div>
            <div
              className="toolbar"
            >
              <button
                aria-label="Add"
                className="item ui noborder button"
                id="addfield"
                onClick={[Function]}
              >
                <i
                  aria-hidden="true"
                  className="blue plus large icon"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Field renders a select widget for a choices-based field 1`] = `
<div
  className="SelectWidget"
/>
`;

exports[`Field renders a select widget for a vocabulary-based field 1`] = `
<div
  className="SelectWidget"
/>
`;

exports[`Field renders an \`array\` type field 1`] = `
<div
  className="ArrayWidget"
/>
`;
